# api/views/Response.go
@@ -1,10 +1,0 @@
-package views
-
-type Response struct {
-	Success      bool
-	Attempt      int
-	AccessToken  string
-	RefreshToken string
-	Message      string
-	User         User
-}
