# api/views/loginForm.go
@@ -1,6 +1,6 @@
 package views
 
 type LoginForm struct {
-	Email    string
-	Password string
+	Email    string `json:"email"`
+	Password string `json:"password"`
 }
