# api/views/refreshTokenResponse.go
@@ -1,0 +1,6 @@
+package views
+
+type RefreshTokenResponse struct {
+	AccessToken  string `json:"accesstoken"`
+	RefreshToken string `json:"refreshtoken"`
+}
