# api/views/user.go
@@ -1,12 +1,14 @@
 package views
 
 type User struct {
-	ID         uint
-	FkCompany  int
-	FkCustomer int
-	Email      string
-	Name       string
-	Lastname   string
-	FkRole     int
-	Role       string
+	ID             uint   `json:"id"`
+	FkCompany      int    `json:"fkcompany"`
+	FkCustomer     int    `json:"fkcustomer"`
+	Email          string `json:"email"`
+	Name           string `json:"name"`
+	Lastname       string `json:"lastname"`
+	FkRole         int    `json:"fkrole"`
+	Role           string `json:"role"`
+	Login_attempts int    `json:"-"`
+	Last_login     string `json:"lastlogin"`
 }
