# docs/swagger.json
@@ -6,17 +6,20 @@
         "contact": {},
         "version": "1"
     },
-    "host": "localhost:60030",
+    "host": "172.25.214.69:60000",
     "basePath": "/Vehicle",
     "paths": {
         "/users/login/": {
             "post": {
-                "description": "Autentica a un usuario y devuelve un token de acceso y un token de refresco",
+                "description": "Autentica a un usuario y devuelve un token de acceso y un token de refresco.",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "autenticación"
                 ],
                 "summary": "Iniciar sesión",
                 "parameters": [
@@ -26,7 +29,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/controllers.LoginInput"
+                            "$ref": "#/definitions/views.LoginForm"
                         }
                     }
                 ],
@@ -34,35 +37,17 @@
                     "200": {
                         "description": "Respuesta exitosa con tokens y detalles del usuario",
                         "schema": {
-                            "$ref": "#/definitions/swagger.LoginResponse"
+                            "$ref": "#/definitions/views.Response"
                         }
                     },
                     "400": {
-                        "description": "Error: Datos inválidos",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
+                        "description": "Error: Datos inválidos o problema con el formato del email"
                     },
                     "401": {
-                        "description": "Error: Usuario o contraseña incorrectos",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
+                        "description": "Error: Credenciales incorrectas o intento de inicio de sesión fallido"
                     },
                     "500": {
-                        "description": "Error interno del servidor",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
+                        "description": "Error interno del servidor"
                     }
                 }
             }
@@ -84,7 +69,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/swagger.RefreshTokenInput"
+                            "$ref": "#/definitions/views.RefreshTokenForm"
                         }
                     }
                 ],
@@ -92,7 +77,7 @@
                     "200": {
                         "description": "Respuesta exitosa con un nuevo token de acceso",
                         "schema": {
-                            "$ref": "#/definitions/swagger.accessTokenResponse"
+                            "$ref": "#/definitions/views.RefreshTokenResponse"
                         }
                     },
                     "400": {
@@ -142,10 +127,7 @@
                     "200": {
                         "description": "Successfully retrieved resources",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.ResourceResponse"
-                            }
+                            "$ref": "#/definitions/views.ResourceResponse"
                         }
                     },
                     "500": {
@@ -162,121 +144,97 @@
         }
     },
     "definitions": {
-        "controllers.LoginInput": {
+        "views.LoginForm": {
             "type": "object",
-            "required": [
-                "password",
-                "username"
-            ],
             "properties": {
+                "email": {
+                    "type": "string"
+                },
                 "password": {
                     "type": "string"
-                },
-                "username": {
+                }
+            }
+        },
+        "views.RefreshTokenForm": {
+            "type": "object",
+            "properties": {
+                "refreshToken": {
                     "type": "string"
                 }
             }
         },
-        "models.ActionRoles": {
+        "views.RefreshTokenResponse": {
             "type": "object",
             "properties": {
-                "roles": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
+                "accesstoken": {
+                    "type": "string"
+                },
+                "refreshtoken": {
+                    "type": "string"
                 }
             }
         },
-        "models.ResourceResponse": {
+        "views.ResourceResponse": {
             "type": "object",
             "properties": {
-                "actions": {
-                    "type": "object",
-                    "additionalProperties": {
-                        "$ref": "#/definitions/models.ActionRoles"
-                    }
-                },
+                "actions": {},
                 "resource": {
                     "type": "string"
                 }
             }
         },
-        "swagger.LoginResponse": {
+        "views.Response": {
             "type": "object",
             "properties": {
-                "accessToken": {
+                "accesstoken": {
                     "type": "string"
                 },
-                "id_company": {
-                    "type": "integer"
-                },
-                "id_customer": {
-                    "type": "integer"
-                },
-                "id_username": {
+                "failedattempts": {
                     "type": "integer"
                 },
                 "message": {
                     "type": "string"
                 },
-                "name": {
+                "refreshtoken": {
                     "type": "string"
                 },
-                "permission": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/swagger.PermissionResponse"
-                    }
+                "success": {
+                    "type": "boolean"
                 },
-                "refreshToken": {
-                    "type": "string"
+                "user": {
+                    "$ref": "#/definitions/views.User"
                 }
             }
         },
-        "swagger.PermissionResponse": {
+        "views.User": {
             "type": "object",
             "properties": {
-                "delete": {
-                    "type": "boolean"
+                "email": {
+                    "type": "string"
                 },
-                "fk_module": {
+                "fkcompany": {
                     "type": "integer"
                 },
-                "fk_role": {
+                "fkcustomer": {
                     "type": "integer"
                 },
-                "fk_username": {
+                "fkrole": {
                     "type": "integer"
                 },
                 "id": {
                     "type": "integer"
                 },
-                "read": {
-                    "type": "boolean"
-                },
-                "update": {
-                    "type": "boolean"
-                },
-                "write": {
-                    "type": "boolean"
-                }
-            }
-        },
-        "swagger.RefreshTokenInput": {
-            "type": "object",
-            "properties": {
-                "refreshToken": {
+                "lastlogin": {
                     "type": "string"
-                }
-            }
-        },
-        "swagger.accessTokenResponse": {
-            "type": "object",
-            "properties": {
-                "accessToken": {
-                    "type": "string",
-                    "example": "tu_nuevo_token_de_acceso_ejemplo"
+                },
+                "lastname": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "role": {
+                    "type": "string"
                 }
             }
         }
