# domain/models/resources.go
@@ -1,0 +1,15 @@
+package models
+
+//	type Resource struct {
+//		gorm.Model
+//		name        string `gorm:"column:name"`
+//		description string `gorm:"column:description"`
+//		path        string `gorm:"column:path"`
+//	}
+//
+// Representación del resultado del query para obtener los privilegios de un rol
+type ResourceRoleAccess struct {
+	ResourceName string `gorm:"column:resource"`
+	Permission   string
+	RoleDesc     string `gorm:"column:RoleDescription"`
+}
